--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -2122,7 +2122,7 @@ body.home {
   padding: 140px 0;
   font-family: "fortescue-pro";
   font-size: 14px;
-  letter-spacing: 15px;
+  letter-spacing: 10px;
   color: #1d1d1b;
   text-transform: uppercase;
   text-decoration: none;
@@ -2138,6 +2138,12 @@ body.home {
 
 .onego .next-project {
   background-color: #ffc529;
+}
+
+@media screen and (min-width: 544px) {
+  .next-project a {
+    letter-spacing: 15px;
+  }
 }
 
 /* Research Block */
